# terminal_fun

./: CLAUDE.md  README.md  pyproject.toml
.claude/sessions/__live_session__/: context-task-16.md  context-task-17.md  context-task-18.md  context-task-19.md  context-task-20.md  context-task-21.md  context-task-22.md  execution_context.md  progress.md  task_log.md
.claude/sessions/globe-term-20260211-201343/: execution_context.md  execution_plan.md  progress.md  session_summary.md  task_log.md
globe_term/: __init__.py  __main__.py  cli.py  globe.py  input.py  map_data.py  renderer.py  utils.py
globe_term/themes/: __init__.py  base.py  geography.py  matrix.py
specs/: SPEC-globe_term.md  SPEC-mouse-interaction-fix.md
tests/: test_auto_rotation.py  test_cli.py  test_globe.py  test_input.py  test_map_data.py  test_renderer.py  test_themes.py  test_utils.py
