[project]
name = "globe-term"
version = "0.1.0"
description = "An interactive ASCII globe rendered in the terminal with mouse-driven rotation and zoom"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "aprancl" },
]
keywords = ["terminal", "ascii", "globe", "cli", "art"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Terminals",
]
dependencies = []

[project.scripts]
globe_term = "globe_term.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
